Fix overflow and About me section

--- a/style.css
+++ b/style.css
@@ -38,15 +38,15 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 114px 25px;
+  padding: 114px 16px;
   position: absolute;
-  width: 452px;
+  width: 100%;
   height: 525px;
   left: calc(35% - 375px / 2);
   top: 92px;
   background-image: url("./img/test.png");
   background-repeat: no-repeat;
-  background-size: 93%;
+  background-size: cover;
   border-bottom-left-radius: 140px;
 }
 
@@ -64,7 +64,7 @@ body {
   flex: none;
   order: 0;
   flex-grow: 0;
-  margin: 12px 25px auto;
+  margin: 12px 35px auto;
 }
 
 .small-text {
@@ -198,9 +198,9 @@ li {
   border-top-right-radius: 140px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 100%;
   padding-bottom: 200px;
+  align-items: flex-start;
 }
 
 .lang {
@@ -218,6 +218,8 @@ li {
   margin-top: 10px;
   border-radius: 8px;
   background-color: #f7f7f9;
+  min-width: 300px;
+  min-height: 53px;
 }
 
 footer {
@@ -248,6 +250,7 @@ footer {
 .left {
   display: flex;
   align-items: flex-start;
+  align-content: left;
 }
 
 .test {
@@ -270,4 +273,16 @@ footer {
   display: flex;
   color: black;
   list-style: none;
+  align-items: center;
+}
+.M-25{
+margin-left: 25px;
+
+}
+
+.skill {
+
+  color: black;
+  margin-left: 30px;
+  font-size: 18px;
 }
